# legal_agent

./: .gitignore  README.md  llm.py  models.py  orchestrator.py  pyproject.toml
agents/: base.py  planner.py  step_executor.py  step_reflector.py
data/documents/: case1.txt  case10.txt  case2.txt  case3.txt  case4.txt  case5.txt  case6.txt  case7.txt  case8.txt  case9.txt
storage/: document_manager.py  pdf_to_markdown_ocr.py  vector_store_manager.py
